# comfyui-llm-tile

./: .gitignore  LLM_TILE_PROMPT_TEMPLATE.md  LLM_TILE_README.md  README.md  __init__.py  conftest.py  node.py  node_advanced.py  node_detailer.py  node_detailer_adaptive.py  node_flux.py  node_regional.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
docs/superpowers/plans/: 2026-04-19-optional-controlnet-latent-seeding.md  2026-04-23-expanded-canvas-seam-fix.md  2026-05-09-tile-detailer.md  2026-05-19-adaptive-tile-detailer.md  2026-05-23-global-canvas-quadtree.md
docs/superpowers/specs/: 2026-04-19-optional-controlnet-latent-seeding-design.md  2026-04-23-expanded-canvas-seam-design.md  2026-05-09-tile-detailer-design.md  2026-05-19-adaptive-tile-detailer-design.md  2026-05-23-quadtree-global-otsu-threshold-design.md
tests/: test_adaptive_detailer.py  test_blend_and_place.py  test_detailer.py  test_mask_resize.py
utils/: __init__.py  controlnet_utils.py  guider_utils.py  image_utils.py  json_utils.py
workflows/: llm-tile basic.json  llm-tile detailer Flux.json
