[project]
name = "llm-tile"
description = "A ComfyUI node that generates tiled image compositions with overlapping regions. This approach creates coherent compositions by using the edges of each tile as seeds for neighboring tiles, resulting in seamless transitions."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["numpy>=1.22.0", "Pillow>=9.0.0", "torch>=1.12.0"]

[project.urls]
Repository = "https://github.com/rickyars/comfyui-llm-tile"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-llm-tile"
Icon = ""
